--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   
   <!-- custom Css file -->
   <link rel="stylesheet" href="assets/css/responsive.css">
-  
+  <link rel="stylesheet" href="assets/css/maintenance-main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -76,5 +76,9 @@
 
   <app>Loading...</app>
 </body>
-
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </html>
